Real First Commit
Signed-off-by: Yixing Jia<yixingjia@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 __pycache__/
 *.py[codz]
 *$py.class
-
+*.db
+*.csv
 # C extensions
 *.so
-
+.DS_Store
 # Distribution / packaging
 .Python
 build/
